MekWarsAutoUpdate: